# ieor4741_phase4

./: .gitignore  CMakeLists.txt  README.md  main_hft.cpp  main_tick.cpp  strategy_virtual.h  utils.h
include/: MarketData.h  Order.h  OrderBook.h  OrderManager.h  Timer.h
tick_processing/: market_data.h  strategy_crtp.h
